--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -43,6 +43,7 @@ jobs:
             -backend-config="resource_group_name=${{ vars.BACKEND_RESOURCE_GROUP_NAME }}" \
             -backend-config="storage_account_name=${{ vars.BACKEND_STORAGE_ACCOUNT_NAME }}" \
             -backend-config="container_name=${{ vars.BACKEND_CONTAINER_NAME }}" \
+            -backend-config="key=terraform.tfstate" \
             -backend-config="use_oidc=true"
 
       - name: Terraform Format Check
@@ -60,10 +61,8 @@ jobs:
           ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
           ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           ARM_USE_OIDC: true
-          TF_VAR_subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          TF_VAR_client_id: ${{ secrets.AZURE_CLIENT_ID }}
-          TF_VAR_tenant_id: ${{ secrets.AZURE_TENANT_ID }}
           TF_VAR_admin_username: ${{ secrets.AZURE_ADMIN_USERNAME }}
+          TF_VAR_admin_password: ${{ secrets.AZURE_ADMIN_PASSWORD }}
 
         continue-on-error: false
         run: terraform plan -no-color -out=tfplan
@@ -75,10 +74,8 @@ jobs:
           ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
           ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           ARM_USE_OIDC: true
-          TF_VAR_subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          TF_VAR_client_id: ${{ secrets.AZURE_CLIENT_ID }}
-          TF_VAR_tenant_id: ${{ secrets.AZURE_TENANT_ID }}
           TF_VAR_admin_username: ${{ secrets.AZURE_ADMIN_USERNAME }}
+          TF_VAR_admin_password: ${{ secrets.AZURE_ADMIN_PASSWORD }}
 
         run: terraform apply -auto-approve
 
